fix: :lipstick: add .no-scrollbar classname
add classname to remove the scrollbar from a div

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,13 @@ body {
     -webkit-text-fill-color: transparent;
     background-clip: text;
   }
+  /* Hide scrollbar */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
